--- a/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/style.css
+++ b/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/style.css
@@ -105,3 +105,25 @@ section{
     font-style: italic;
     opacity: .8;
 }
+
+.btn{
+    display: inline-flex;
+    gap: 4px;
+    align-items: center;
+    padding: 12px 16px;
+    border: solid 1px;
+    border-radius: 30px;
+    background: transparent;
+    font-weight: 500;
+    transition: .4s ease-in-out;
+}
+.btn:hover{
+    transform: scale(1.1);
+    background: #053a03;
+}
+
+.cta{
+    background: rgb(113,87,26);
+    background: linear-gradient(120deg, rgba(113,87,26,1) 0%, rgba(76,59,21,1) 50%, rgba(113,87,26,1) 100%); 
+    margin-right: 8px;
+}
