--- a/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/style.css
+++ b/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/style.css
@@ -58,7 +58,6 @@ header .logo img{
 }
 
 section{
-    border: solid red;
     padding: 5rem;
 }
 
@@ -126,4 +125,37 @@ section{
     background: rgb(113,87,26);
     background: linear-gradient(120deg, rgba(113,87,26,1) 0%, rgba(76,59,21,1) 50%, rgba(113,87,26,1) 100%); 
     margin-right: 8px;
+}
+
+footer{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .logo img{
+    width: 80px;
+}
+
+footer p{
+    font-weight: 500;
+    text-align: center;
+}
+
+footer .social-media{
+    display: inline-flex;
+    gap: 12px;
+    align-content: center;
+}
+
+footer .social-media a i{
+    padding: 6px;
+    border-radius: 6px;
+    background: transparent;
+    transition: .2s ease-in-out;
+}
+footer .social-media a i:hover{
+    transform: scale(1.1);
+    background:  rgb(113,87,26);
 }
